--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,7 @@ name: Run Python Script Every 10 Minutes (9 AM - 4 PM IST)
 
 on:
   schedule:
-    - cron: '*/10 3-10 * * *'  # Runs every 10 minutes from 9 AM to 4 PM IST
+    - cron: '*/10 3-10 * * 1-5'  # Runs every 10 minutes from 9 AM to 4 PM IST
   workflow_dispatch:  # Allows manual execution
 
 jobs:
